networkpolicy/networkpolicy__basic_kafka_setup__cert-manager__exception__system__egress__ports__443__nr12__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cert-manager--exception--system--egress--ports--443--nr12
  namespace: cert-manager
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 443
